Fix korlibs/korge#389 (#331)