@@ -37,6 +37,8 @@ fun Project.configureJvm() {
 		group = GROUP_KORGE_RUN
 		dependsOn("jvmMainClasses")
 		project.afterEvaluate {
+			val beforeJava9 = System.getProperty("java.version").startsWith("1.")
+		    if (!beforeJava9) task.jvmArgs("--add-opens=java.desktop/sun.java2d.opengl=ALL-UNNAMED")
 			task.main = korge.realJvmMainClassName
 		}
 	}
